Added info on index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <option>by year</option>
                 </select>
             </h1>
-            <p>area range chart</p>
+            <p>area range chart, must be editable inline</p>
         </div>
 
         <div id="earliest_time_in">
@@ -66,6 +66,7 @@
 
         <div id="form">
             <h1>Add Time-in/Time-out Data</h1>
+            <p>Add new column in area range chart with slider input and a confirm button</p>
         </div>
     </body>
 </html>
