Added ReactJS files, included in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <title>LSD</title>
+        <script src="build/react.js"></script>
+        <script src="build/react-dom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     </head>
     <body>
         <div id="work_hour_trend">
