--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="scripts/domready.js"></script>
         <script src="build/react.min.js"></script>
         <script src="build/react-dom.min.js"></script>
+        <script src="build/react-with-addons.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
         <link rel="stylesheet" href="styles/lsd.css"/>
         <script>
