Refactored LSDSliderVertical.js into LsdSlider.js. Added support for horizontal slider and automatic orientation detection.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8"/>
         <title>LSD</title>
         <script src="scripts/domready.js"></script>
-        <script src="build/react.min.js"></script>
-        <script src="build/react-dom.min.js"></script>
+        <script src="build/react.js"></script>
+        <script src="build/react-dom.js"></script>
         <script src="build/react-with-addons.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
         <link rel="stylesheet" href="styles/lsd.css"/>
@@ -53,8 +53,8 @@
             </h1>
         </div>
         <div id="work_hour_trend">
-            <div id="lsd-slider-vertical-1" key="1"></div>
-            <div id="lsd-slider-vertical-2" key="2"></div>
+            <div id="lsd-slider-1" key="1"></div>
+            <div id="lsd-slider-2" key="2"></div>
             <h1>Work Hour Trend</h1>
             <p>area range chart, must be editable inline, an empty (placeholder) for new entries at the end of the chart, add animation when merging new data with the existing</p>
         </div>
@@ -93,6 +93,6 @@
         </div>
 
 
-        <script type="text/babel" src="scripts/LSDSliderVertical.js"></script>
+        <script type="text/babel" src="scripts/LsdSlider.js"></script>
     </body>
 </html>
