Set font to Basic white.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="build/react-with-addons.min.js"></script>
         <script src="build/browser.min.js"></script>
         <link rel="stylesheet" href="styles/lsd.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Basic' rel='stylesheet' type='text/css'>
         <script>
           DomReady.ready(function(){
             cumulativeOffset = function(element) {
