--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
+        <link rel="stylesheet" href="styles/reset.css"/>
         <meta charset="UTF-8"/>
         <title>LSD</title>
         <script src="scripts/domready.js"></script>
