Added Flexbox Grid CSS.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles/reset.css"/>
+        <link rel="stylesheet" href="styles/flexboxgrid.min.css" type="text/css">
         <meta charset="UTF-8"/>
         <title>LSD</title>
         <script src="scripts/domready.js"></script>
