--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles/reset.css"/>
         <link rel="stylesheet" href="styles/flexboxgrid.min.css" type="text/css">
+        <link rel='stylesheet' href="fonts/Canter.css" type='text/css'>
         <meta charset="UTF-8"/>
         <title>LSD</title>
         <script src="scripts/domready.js"></script>
@@ -11,7 +12,7 @@
         <script src="build/react-with-addons.min.js"></script>
         <script src="build/browser.min.js"></script>
         <link rel="stylesheet" href="styles/lsd.css"/>
-        <link href='https://fonts.googleapis.com/css?family=Basic' rel='stylesheet' type='text/css'>
+
         <script>
           DomReady.ready(function(){
             cumulativeOffset = function(element) {
