--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <link rel="stylesheet" href="styles/reset.css"/>
+        <link rel="stylesheet" href="styles/normalize.css"/>
         <link rel="stylesheet" href="styles/flexboxgrid.min.css" type="text/css">
         <link rel='stylesheet' href="fonts/Canter.css" type='text/css'>
         <meta charset="UTF-8"/>
