--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </h1>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="box" id="work_hour_trend">
                         <h1>Work Hour Trend</h1>
                         <p>area range chart, must be editable inline, an empty (placeholder) for new entries at the end of the chart, add animation when merging new data with the existing</p>
@@ -56,13 +56,13 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <div class="box" id="earliest_time_in">
                         <h1>Earliest Time-in</h1>
                     </div>
                 </div>
 
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <div class="box" id="latest_time_in">
                         <h1>Latest Time-in</h1>
                     </div>
@@ -70,13 +70,13 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <div class="box" id="earliest_time_out">
                         <h1>Earliest Time-out</h1>
                     </div>
                 </div>
 
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <div class="box" id="latest_time_out">
                         <h1>Latest Time-out</h1>
                     </div>
@@ -84,23 +84,23 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                     <div class="box" id="avg_work_hours">
                         <h1>Average Working Hours</h1>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                     <div class="box" id="form">
                         <h1>Add Time-in/Time-out Data</h1>
                         <p>Add new column in area range chart with slider input and a confirm button</p>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                     <div class="box" id="sick_leaves">
                         <h1>Sick Leaves Available</h1>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                     <div class="box" id="vacation_leaves">
                         <h1>Vacation Leaves Available</h1>
                     </div>
