--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="box" id="footer">
+                        <h1>Footer</h1>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <script type="text/babel" src="scripts/LsdSlider.js"></script>
