Moved all source code to /src.

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <link rel="stylesheet" href="styles/normalize.css"/>
+        <!-- <link rel="stylesheet" href="styles/normalize.css"/>
         <link rel="stylesheet" href="styles/flexboxgrid.min.css" type="text/css">
-        <link rel='stylesheet' href="fonts/Canter.css" type='text/css'>
+        <link rel='stylesheet' href="fonts/Canter.css" type='text/css'> -->
         <meta charset="UTF-8"/>
         <title>LSD</title>
         <script src="./node_modules/react/dist/react-with-addons.js"></script>
-        <link rel="stylesheet" href="styles/lsd.css"/>
+        <!-- <link rel="stylesheet" href="styles/lsd.css"/> -->
     </head>
     <body>
         <div class="row">
